# Argus

./: .env.ci.example  .env.example  .env.live.disabled.example  .env.paper.example  .gitignore  AGENTS.md  ARGUS_DEFECT_REGISTER.md  ARGUS_FOUNDER_QUICKSTART.md  ARGUS_PROJECT_STATUS.md  ARGUS_RC1_READINESS.md  ARGUS_SEPARATION_SPRINT_1_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  PHASE15_COMPLETION_REPORT.md  README.md  ROADMAP.md  docker-compose.yml  package.json  pnpm-lock.yaml  sprint2_h4_report.txt
apps/api/: Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 5bb9b33b045b_auth_sessions_and_login_attempts.py  a3b4c5d6e7f8_treasury_executive_analytics.py  a7b8c9d0e1f2_operating_mode_state_machine.py  b4c5d6e7f8a9_operational_validation.py  b8c0d1e2f3a4_health_supervisor_worker_foundation.py  c6a1f0e9d2b8_config_policy_lifecycle_versioning.py  c9d0e1f2a3b4_market_intelligence_platform.py  d0e1f2a3b4c5_strategy_laboratory.py  d1a2b3c4d5e6_strategy_version_immutability.py  e1f2a3b4c5d6_paper_trading_institution.py  f2a3b4c5d6e7_micro_live_institution.py  f83d80fe9524_initial_institutional_foundation_schema.py
apps/api/app/: __init__.py  bootstrap_founder.py  main.py
apps/api/app/api/: deps.py  health.py
apps/api/app/core/: security.py  (+2 more)
apps/api/tests/: test_audit.py  test_auth.py  test_governance.py  test_governance_h2_activation_concurrency.py  test_governance_h3_immutability.py  test_governance_h4_identity.py  test_governance_h5_assurance.py  test_health_and_settings.py  test_health_supervisor.py  test_market_intelligence.py  test_micro_live.py  test_migration_h1_legacy_backfill.py  test_migration_phase7_history_backfill.py  test_migrations.py  test_mode_transitions.py  test_models.py  test_operating_mode.py  test_operating_mode_concurrency.py  test_operations.py  test_paper_trading.py  test_strategy_laboratory.py  test_treasury.py
(+269 files in other folders)
